--- a/src/app/pages/feature/manage/feature-subscription/feature-subscription.page.html
+++ b/src/app/pages/feature/manage/feature-subscription/feature-subscription.page.html
@@ -31,19 +31,19 @@
                 <ion-list class="ion-text-center">
                   <ion-item>
                     {{subscriptionResource['en-US'].matrix_string[0][11]}}
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     {{subscriptionResource['en-US'].matrix_string[0][12]}}
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     {{subscriptionResource['en-US'].matrix_string[0][13]}}
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     {{subscriptionResource['en-US'].matrix_string[0][14]}}
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     {{subscriptionResource['en-US'].matrix_string[0][15]}}
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                 </ion-list>
               </ion-card-content>
               <ion-col *ngIf="!moment.subscription || moment.subscription === 'Free'">
@@ -68,19 +68,19 @@
                 <ion-list class="ion-text-center">
                   <ion-item>
                     {{subscriptionResource['en-US'].matrix_string[1][11]}}
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     {{subscriptionResource['en-US'].matrix_string[1][12]}}
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     {{subscriptionResource['en-US'].matrix_string[1][13]}}
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     {{subscriptionResource['en-US'].matrix_string[1][14]}}
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     {{subscriptionResource['en-US'].matrix_string[1][15]}}
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                 </ion-list>
               </ion-card-content>
               <ion-col *ngIf="moment.subscription === 'Growth'">
@@ -118,27 +118,27 @@
                   <ion-item>
                     <ion-label position="stacked">Name</ion-label>
                     <ion-input autocomplete="on" type="text" formControlName="name" placeholder="Jane Doe"></ion-input>
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     <ion-label position="stacked">Email Address</ion-label>
                     <ion-input autocomplete="on" type="email" formControlName="email" placeholder="jane@restvo.com"></ion-input>
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     <ion-label position="stacked">Street</ion-label>
                     <ion-input autocomplete="on" type="text" formControlName="line1"></ion-input>
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     <ion-label position="stacked">City</ion-label>
                     <ion-input autocomplete="on" type="text" formControlName="city"></ion-input>
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     <ion-label position="stacked">State</ion-label>
                     <ion-input autocomplete="on" type="text" formControlName="state"></ion-input>
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     <ion-label position="stacked">Zip/Postal Code</ion-label>
                     <ion-input autocomplete="on" type="text" formControlName="postal_code"></ion-input>
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item>
                     <ion-label position="stacked">Country</ion-label>
                     <ion-select [interfaceOptions]="{cssClass: 'level-15'}" formControlName="country">
@@ -169,11 +169,11 @@
                       <ion-select-option value="CH">Switzerland</ion-select-option>
                       <ion-select-option value="GB">United Kingdom</ion-select-option>
                     </ion-select>
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                   <ion-item class="ion-margin-top">
                     <ion-label position="stacked">Discount Code</ion-label>
                     <ion-input type="text" formControlName="coupon"></ion-input>
-                  </ion-item>
+                  <div tabindex="0"></div></ion-item>
                 </form>
                 <div class="ion-margin">* I authorise Restvo to send instructions to the financial institution that issued my card to take payments from my card account in accordance with the terms of my agreement with you.</div>
                 <ion-row>
