--- a/src/app/pages/feature/createfeature/createfeature.page.html
+++ b/src/app/pages/feature/createfeature/createfeature.page.html
@@ -16,11 +16,11 @@
           <ion-col>
             <ion-item lines="none">
               <div style="font-size: 14px" class="ion-text-wrap">{{resource['en-US'].value[37]}}</div>
-            </ion-item>
+            <div tabindex="0"></div></ion-item>
             <ion-item lines="none">
               <div class="moment-label" slot="start"><ion-icon class="side-icon" color="grey" name="brush"></ion-icon></div>
               <ion-textarea [(ngModel)]="moment.matrix_string[moment.resource.matrix_number[0].indexOf(10000)][0]" rows="1" [minRows]="1" [maxRows]="2" autosize autocorrect="on" [placeholder]="moment.resource['en-US'].value[0] + ' ' + moment.resource['en-US'].matrix_string[0][1]" ></ion-textarea>
-            </ion-item>
+            <div tabindex="0"></div></ion-item>
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -31,7 +31,7 @@
           <ion-col class="ion-align-self-center">
             <ion-item lines="none">
               <div style="font-size: 14px" class="ion-text-wrap">Add a Program to Your Community:</div>
-            </ion-item>
+            <div tabindex="0"></div></ion-item>
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
                 <ion-col class="ion-align-self-center" *ngFor="let referenceActivity of referenceActivities; index as j; trackBy: customTrackBy" size="auto">
@@ -69,18 +69,18 @@
           <ion-col>
             <ion-item lines="none"> <!--Summary-->
               <div class="moment-label" style="font-style: italic; color: var(--ion-color-darkgrey)" slot="start">Here is a summary of your community:</div>
-            </ion-item>
+            <div tabindex="0"></div></ion-item>
             <ion-item lines="none"> <!--Name-->
               <ion-label class="summary-label">Name:</ion-label>
               <ion-input class="ion-text-start" type="text" [(ngModel)]="moment.matrix_string[moment.resource.matrix_number[0].indexOf(10000)][0]"></ion-input>
-            </ion-item>
+            <div tabindex="0"></div></ion-item>
             <ion-item lines="none"> <!--Description-->
               <ion-label class="summary-label">Description:</ion-label>
               <ion-textarea rows="1" [minRows]="1" [maxRows]="5" autosize class="ion-text-start ion-text-wrap" [(ngModel)]="moment.matrix_string[moment.resource.matrix_number[0].indexOf(10010)][0]"></ion-textarea>
-            </ion-item>
+            <div tabindex="0"></div></ion-item>
             <ion-item lines="none" *ngIf="moment.assets?.length">
               <ion-label class="summary-label">Media:</ion-label>
-            </ion-item>
+            <div tabindex="0"></div></ion-item>
             <div *ngIf="moment.assets?.length">
               <ion-grid class="selected-grid">
                 <ion-row>
@@ -111,7 +111,7 @@
             </div>
             <ion-item lines="none">
               <ion-label class="summary-label">Programs:</ion-label>
-            </ion-item>
+            <div tabindex="0"></div></ion-item>
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
                 <ion-col class="ion-align-self-center" *ngFor="let referenceActivity of referenceActivities; index as j; trackBy: customTrackBy" size="auto">
@@ -153,7 +153,7 @@
           <ion-col class="ion-align-self-center">
             <ion-item lines="none">
               <div style="font-size: 14px" class="ion-text-wrap">Choose one to begin inviting leaders and members:</div>
-            </ion-item>
+            <div tabindex="0"></div></ion-item>
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
                 <ion-col class="ion-align-self-center" size="auto">
@@ -185,7 +185,7 @@
     <ion-slide>
       <ion-grid class="slide-grid">
         <ion-row class="ion-justify-content-center ion-align-items-center slide-row">
-          <ion-item lines="none">Congratulations! You have completed the set up process for {{moment.matrix_string[0][0]}}.</ion-item>
+          <ion-item lines="none">Congratulations! You have completed the set up process for {{moment.matrix_string[0][0]}}.<div tabindex="0"></div></ion-item>
         </ion-row>
       </ion-grid>
     </ion-slide>
