--- a/src/app/pages/feature/manage/feature-billing/feature-billing.page.html
+++ b/src/app/pages/feature/manage/feature-billing/feature-billing.page.html
@@ -44,15 +44,15 @@
         <ion-item>
           <ion-label slot="start">Card Type</ion-label>
           <p slot="end">{{sources[0].card.brand}}</p>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
         <ion-item>
           <ion-label slot="start">Last 4 Digits</ion-label>
           <p slot="end">{{sources[0].card.last4}}</p>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
         <ion-item>
           <ion-label slot="start">Expiration Date</ion-label>
           <p slot="end">{{sources[0].card.exp_month}}/{{sources[0].card.exp_year}}</p>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
       </div>
     </ion-card-content>
     <ion-row *ngIf="!updatePayment">
@@ -71,27 +71,27 @@
         <ion-item>
           <ion-label position="stacked">Name</ion-label>
           <ion-input autocomplete="on" type="text" formControlName="name" placeholder="Jane Doe"></ion-input>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
         <ion-item>
           <ion-label position="stacked">Email Address</ion-label>
           <ion-input autocomplete="on" type="email" formControlName="email" placeholder="jane@restvo.com"></ion-input>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
         <ion-item>
           <ion-label position="stacked">Street</ion-label>
           <ion-input autocomplete="on" type="text" formControlName="line1"></ion-input>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
         <ion-item>
           <ion-label position="stacked">City</ion-label>
           <ion-input autocomplete="on" type="text" formControlName="city"></ion-input>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
         <ion-item>
           <ion-label position="stacked">State</ion-label>
           <ion-input autocomplete="on" type="text" formControlName="state"></ion-input>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
         <ion-item>
           <ion-label position="stacked">Zip/Postal Code</ion-label>
           <ion-input autocomplete="on" type="text" formControlName="postal_code"></ion-input>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
         <ion-item>
           <ion-label position="stacked">Country</ion-label>
           <ion-select [interfaceOptions]="{cssClass: 'level-15'}" formControlName="country">
@@ -122,7 +122,7 @@
             <ion-select-option value="CH">Switzerland</ion-select-option>
             <ion-select-option value="GB">United Kingdom</ion-select-option>
           </ion-select>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
       </ion-card-content>
     </form>
     <div class="ion-margin">* I authorise Restvo to send instructions to the financial institution that issued my card to take payments from my card account in accordance with the terms of my agreement with you.</div>
@@ -163,7 +163,7 @@
           <div class="created ion-no-margin small-font" slot='end'>
             <ion-label class="ion-text-center ion-text-wrap">{{invoice.created*1000 | datetime: 'm:l,d:n,y:n'}}</ion-label>
           </div>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
       </ion-list>
 
     </ion-card-content>
