--- a/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
+++ b/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
@@ -29,7 +29,7 @@
       {{userData.user.first_name}} {{userData.user.last_name}}
       <ion-icon slot="end" color="tertiary" *ngIf="!this.selfConversationObj.select" name="radio-button-off"></ion-icon>
       <ion-icon slot="end" color="tertiary" *ngIf="this.selfConversationObj.select" name="checkmark-circle"></ion-icon>
-    </ion-item>
+    <div tabindex="0"></div></ion-item>
     <ion-virtual-scroll [items]="conversations" approxItemHeight="60px">
       <div *virtualItem="let obj">
         <ion-item (click)="selectFriend(obj)" *ngIf="(filter === 'connect' || filter === 'both') && (obj.conversation.type === 'connect')">
@@ -40,7 +40,7 @@
           {{obj.data.name}}
           <ion-icon slot="end" color="tertiary" *ngIf="!obj.select" name="radio-button-off"></ion-icon>
           <ion-icon slot="end" color="tertiary" *ngIf="obj.select" name="checkmark-circle"></ion-icon>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
         <ion-item (click)="selectFriend(obj)" *ngIf="(filter === 'group' || filter === 'both') && obj.conversation.type === 'group'">
           <ion-avatar slot="start">
             <img *ngIf="obj.conversation.group.background" [src]="obj.conversation.group.background"/>
@@ -49,7 +49,7 @@
           {{obj.conversation.group.name}}
           <ion-icon slot="end" color="tertiary" *ngIf="!obj.select" name="radio-button-off"></ion-icon>
           <ion-icon slot="end" color="tertiary" *ngIf="obj.select" name="checkmark-circle"></ion-icon>
-        </ion-item>
+        <div tabindex="0"></div></ion-item>
       </div>
     </ion-virtual-scroll>
     <ion-list-header *ngIf="hasOrganizerAccess">{{userData.user.churches[userData.currentCommunityIndex].name}}</ion-list-header>
@@ -62,7 +62,7 @@
         {{person.name}}
         <ion-icon color="button1" *ngIf="!person.select" name="radio-button-off" slot="end"></ion-icon>
         <ion-icon color="button1" *ngIf="person.select" name="checkmark-circle" slot="end"></ion-icon>
-      </ion-item>
+      <div tabindex="0"></div></ion-item>
     </ion-list>
     <ion-infinite-scroll position="bottom" (ionInfinite)="loadMoreAppUsers($event)">
       <ion-infinite-scroll-content></ion-infinite-scroll-content>
