--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -57,12 +57,12 @@
   <ion-list class="chat-list" lines="none">
     <ion-item *ngIf="messages?.length === 0 && chatFinishedLoading">
       <p class="message-timestamp ion-text-center" >Be the first one to say 'hi' to your group.</p>
-    </ion-item>
+    <div tabindex="0"></div></ion-item>
     <div *ngFor="let message of messages; trackBy: customTrackBy">
       <!--Individual Chat Bubble-->
       <ion-item *ngIf="message.timestamp">
         <p class="message-timestamp ion-text-center">{{message.createdAt | datetime: 'h:n,m:n,w:s,m:n,d:n'}}</p>
-      </ion-item>
+      <div tabindex="0"></div></ion-item>
       <ion-item class="message-wrapper" *ngIf="!message.timestamp && (message.author && message.author._id !== userData.user._id)" (longPressed)="seeUserInfo($event, message.author)">
         <!--the recipient's message-->
         <ion-avatar class="sender-avatar" [ngClass]="{'online': (chatService.onlineUsers.indexOf(message.author._id) > -1)}" slot="start" (click)="seeUserInfo($event, message.author)">
@@ -240,7 +240,7 @@
             <ion-icon *ngIf="message.body?.length > 30" class="reply-icon" name="arrow-undo" (click)="sendQuoteAndReply(message)"></ion-icon>
           </div>
         </div>
-      </ion-item>
+      <div tabindex="0"></div></ion-item>
 
       <!--your message-->
       <ion-item class="message-wrapper" *ngIf="!message.createdAtFormatted && message.author && message.author._id === userData.user._id">
@@ -416,7 +416,7 @@
             </div>
           </div>
         </div>
-      </ion-item>
+      <div tabindex="0"></div></ion-item>
     </div>
   </ion-list>
 </ion-content>
