--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -34,17 +34,17 @@
               </ion-segment>
               <ion-item *ngIf="loginMode === 'email'" lines="full">
                 <ion-input id="email" class="email" type="email" formControlName="email" placeholder="Email" inputmode="email" enterkeyhint="next" autocomplete="username"></ion-input>
-              </ion-item>
+              <div tabindex="0"></div></ion-item>
               <ion-item *ngIf="loginMode === 'mobile'" lines="full">
                 <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="calling_code" name="Country Calling Code" value="+1">
                   <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
                 </ion-select>
                 <ion-input id="phone_number" class="phone_number" type="tel" formControlName="phone_number" placeholder="Mobile Number" autocomplete="username"></ion-input>
-              </ion-item>
+              <div tabindex="0"></div></ion-item>
               <ion-item [hidden]="recovery_mode" lines="full">
                 <ion-input id="password" class="password" (keyup.enter)="login()" placeholder="Password" formControlName="password" [type]="passwordType" inputmode="text" enterkeyhint="enter" autocomplete="current-password"></ion-input>
                 <ion-icon slot="end" [name]="passwordIcon" class="password-icon" (click)='hideShowPassword()'></ion-icon>
-              </ion-item>
+              <div tabindex="0"></div></ion-item>
             </ion-list>
             <div>
               <p class="ion-padding-horizontal" *ngIf="loginStatus">{{loginStatus}}</p>
@@ -84,7 +84,7 @@
                   <div class="graphics-container">
                     <img src="assets/img/intro_1.png" />
                   </div>
-                </ion-item>
+                <div tabindex="0"></div></ion-item>
                 <ion-row class="ion-justify-content-center" lines="none">
                   <div class="intro-title">Connect with mentors</div>
                 </ion-row>
@@ -100,7 +100,7 @@
                   <div class="graphics-container">
                     <img src="assets/img/intro_2.png" />
                   </div>
-                </ion-item>
+                <div tabindex="0"></div></ion-item>
                 <ion-row class="ion-justify-content-center" lines="none">
                   <div class="intro-title">Build deeper relationships</div>
                 </ion-row>
@@ -116,7 +116,7 @@
                   <div class="graphics-container">
                     <img src="assets/img/intro_3.png" />
                   </div>
-                </ion-item>
+                <div tabindex="0"></div></ion-item>
                 <ion-row class="ion-justify-content-center" lines="none">
                   <div class="intro-title">Discover new communities</div>
                 </ion-row>
@@ -167,7 +167,7 @@
                         <ion-item lines="full">
                           <ion-input id="firstName" type="text" formControlName="first_name" placeholder="First Name" autocapitalize="on" autocomplete="given-name"></ion-input>
                           <ion-input id="lastName" type="text" formControlName="last_name" placeholder="Last Name" autocapitalize="on" autocomplete="family-name"></ion-input>
-                        </ion-item>
+                        <div tabindex="0"></div></ion-item>
 
                         <div *ngIf="!nameForm.controls.first_name.pristine && !nameForm.controls.first_name.valid">
                           <div class="form-error ion-text-wrap"  *ngIf="!nameForm.controls.first_name.pristine && nameForm.controls.first_name.hasError('required')">
@@ -192,7 +192,7 @@
                         <ion-item *ngIf="loginMode === 'email'" lines="full">
                           <!-- <ion-input id="email" class="email" type="email" formControlName="email" placeholder="Email" id="email"></ion-input> -->
                           <ion-input id="newEmail" type="email" formControlName="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z0-9-.]{2,}$" placeholder="Email"></ion-input>
-                        </ion-item>
+                        <div tabindex="0"></div></ion-item>
                         <div *ngIf="!emailPassForm.controls.email.pristine && !emailPassForm.controls.email.valid">
                           <div class="form-error ion-text-wrap" *ngIf="!emailPassForm.controls.email.pristine && emailPassForm.controls.email.hasError('required')">
                             This is a required field.
@@ -204,7 +204,7 @@
                         <ion-item *ngIf="loginMode === 'email'" lines="full">
                           <ion-input id="newPassword1" [type]="passwordType" formControlName="password" placeholder="Password"></ion-input>
                           <ion-icon slot="end" [name]="passwordIcon" class="password-icon" (click)='hideShowPassword()'></ion-icon>
-                        </ion-item>
+                        <div tabindex="0"></div></ion-item>
                         <div *ngIf="!emailPassForm.controls.password.pristine && !emailPassForm.controls.password.valid">
                           <div class="form-error ion-text-wrap" *ngIf="!emailPassForm.controls.password.pristine && emailPassForm.controls.password.hasError('required')">
                             This is a required field.
@@ -215,7 +215,7 @@
                         </div>
                         <ion-item *ngIf="loginMode === 'email'" lines="full">
                           <ion-input id="newPassword2" type="password" formControlName="passwordConfirmation" placeholder="Confirm Password"></ion-input>
-                        </ion-item>
+                        <div tabindex="0"></div></ion-item>
                         <div *ngIf="!emailPassForm.controls.passwordConfirmation.pristine && (!emailPassForm.controls.passwordConfirmation.valid || emailPassForm.hasError('mismatchedPasswords'))">
                           <div class="form-error ion-text-wrap" *ngIf="!emailPassForm.controls.passwordConfirmation.pristine && emailPassForm.controls.passwordConfirmation.hasError('required')">
                             This is a required field.
@@ -241,7 +241,7 @@
                         <ion-item *ngIf="loginMode === 'mobile'" lines="full">
                           <ion-input type="text" formControlName="first_name" placeholder="First Name" autocapitalize="on" id="first-name"></ion-input>
                           <ion-input type="text" formControlName="last_name" placeholder="Last Name" autocapitalize="on" id="last-name"></ion-input>
-                        </ion-item>
+                        <div tabindex="0"></div></ion-item>
 
                         <div *ngIf="!nameForm.controls.first_name.pristine && !nameForm.controls.first_name.valid">
                           <div class="form-error ion-text-wrap"  *ngIf="!nameForm.controls.first_name.pristine && nameForm.controls.first_name.hasError('required')">
@@ -267,7 +267,7 @@
                             <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
                           </ion-select>
                           <ion-input class="phone_number" type="tel" pattern="[0-9]{4,}$" formControlName="mobile_sig_number" placeholder="Mobile Number"></ion-input>
-                        </ion-item>
+                        <div tabindex="0"></div></ion-item>
                         <div class="form-error" *ngIf="!mobileForm.controls.mobile_sig_number.pristine && !mobileForm.controls.mobile_sig_number.valid">
                           Invalid mobile number.
                         </div>
@@ -303,7 +303,7 @@
                       </ion-buttons>
                       <ion-item lines="full">
                         <ion-input type="text" inputmode="numeric" pattern="[0-9]*" formControlName="verification_code" placeholder="6-digit Verification Code" autocomplete="one-time-code" maxlength="6"></ion-input>
-                      </ion-item>
+                      <div tabindex="0"></div></ion-item>
                         <div class="form-error" *ngIf="!verifyCodeForm.controls.verification_code.pristine && !verifyCodeForm.controls.verification_code.valid">
                           Invalid code.
                         </div>
@@ -329,7 +329,7 @@
                       <ion-item lines="full">
                         <ion-label position="stacked" color="secondary">Email Address</ion-label>
                         <ion-input type="email" formControlName="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" placeholder="Enter Email Address"></ion-input>
-                      </ion-item>
+                      <div tabindex="0"></div></ion-item>
                       <div *ngIf="!emailForm.controls.email.pristine && !emailForm.controls.email.valid">
                         <div class="form-error" *ngIf="!emailForm.controls.email.pristine && emailForm.controls.email.hasError('required')">
                           This is a required field.
@@ -364,7 +364,7 @@
                       <ion-item lines="full">
                         <ion-input #password [type]="passwordType" formControlName="password" placeholder="Pick a Password"></ion-input>
                         <ion-icon slot="end" [name]="passwordIcon" class="password-icon" (click)='hideShowPassword()'></ion-icon>
-                      </ion-item>
+                      <div tabindex="0"></div></ion-item>
                       <div *ngIf="!passForm.controls.password.pristine && !passForm.controls.password.valid">
                         <div class="form-error ion-text-wrap" *ngIf="!passForm.controls.password.pristine && passForm.controls.password.hasError('required')">
                           This is a required field.
@@ -375,7 +375,7 @@
                       </div>
                       <ion-item lines="full">
                         <ion-input type="password" formControlName="passwordConfirmation" placeholder="Confirm Password"></ion-input>
-                      </ion-item>
+                      <div tabindex="0"></div></ion-item>
                       <div *ngIf="!passForm.controls.passwordConfirmation.pristine && (!passForm.controls.passwordConfirmation.valid || passForm.hasError('mismatchedPasswords'))">
                         <div class="form-error ion-text-wrap" *ngIf="!passForm.controls.passwordConfirmation.pristine && passForm.controls.passwordConfirmation.hasError('required')" >
                           This is a required field.
@@ -411,12 +411,12 @@
                         <img class="profile-pic" *ngIf="userData && userData.user && userData.user.avatar" [src]="userData.user.avatar" onerror="this.style.display='none'"/>
                         <ion-icon name="camera" class="camera-icon" color="primary"></ion-icon>
                       </div>
-                    </ion-item>
+                    <div tabindex="0"></div></ion-item>
                     <ion-item *ngIf="!platform.is('cordova')" class="ion-no-padding ion-no-margin" lines="none">
                       <div class="browser-upload">
                         <input type="file" name="image" (change)="selectPhotoFromDeviceAndUpload($event, false)" accept="image/*"/>
                       </div>
-                    </ion-item>
+                    <div tabindex="0"></div></ion-item>
                     <ion-row>
                       <ion-col>
                         <ion-button *ngIf="!userData || !userData.user || !userData.user.avatar" expand="full" shape="round" color="primary" (click)="finish()">Skip</ion-button>
@@ -471,7 +471,7 @@
                           <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
                         </ion-select>
                         <ion-input class="phone_number" type="tel" pattern="[0-9]{4,}$" formControlName="mobile_sig_number" placeholder="Mobile Number" autocomplete="tel"></ion-input>
-                      </ion-item>
+                      <div tabindex="0"></div></ion-item>
                       <div class="form-error" *ngIf="!mobileForm.controls.mobile_sig_number.pristine && !mobileForm.controls.mobile_sig_number.valid">
                         Invalid mobile number.
                       </div>
