--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -32,19 +32,20 @@
                   <ion-label>Mobile</ion-label>
                 </ion-segment-button>
               </ion-segment>
-              <ion-item *ngIf="loginMode === 'email'" lines="full">
-                <ion-input id="email" class="email" type="email" formControlName="email" placeholder="Email" inputmode="email" enterkeyhint="next" autocomplete="username"></ion-input>
-              <div tabindex="0"></div></ion-item>
-              <ion-item *ngIf="loginMode === 'mobile'" lines="full">
-                <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="calling_code" name="Country Calling Code" value="+1">
+              <ion-card *ngIf="loginMode === 'email'" lines="full">
+                <input id="email" class="email ion-input" type="text" formControlName="email" placeholder="Email" inputmode="email" autocomplete="username" />
+              </ion-card>
+              <ion-card *ngIf="loginMode === 'mobile'" lines="full">
+                <ion-label hidden>Calling Code</ion-label>
+                <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code ion-no-margin" formControlName="calling_code" value="+1">
                   <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
                 </ion-select>
-                <ion-input id="phone_number" class="phone_number" type="tel" formControlName="phone_number" placeholder="Mobile Number" autocomplete="username"></ion-input>
-              <div tabindex="0"></div></ion-item>
-              <ion-item [hidden]="recovery_mode" lines="full">
-                <ion-input id="password" class="password" (keyup.enter)="login()" placeholder="Password" formControlName="password" [type]="passwordType" inputmode="text" enterkeyhint="enter" autocomplete="current-password"></ion-input>
-                <ion-icon slot="end" [name]="passwordIcon" class="password-icon" (click)='hideShowPassword()'></ion-icon>
-              <div tabindex="0"></div></ion-item>
+                <input id="phone_number" class="phone_number ion-input" type="tel" formControlName="phone_number" placeholder="Mobile Number" inputmode="tel" autocomplete="username" />
+              </ion-card>
+              <ion-card [hidden]="recovery_mode" lines="full">
+                <input id="password" class="password ion-input" (keyup.enter)="login()" placeholder="Password" formControlName="password" [type]="passwordType" inputmode="text" autocomplete="current-password" />
+                <ion-icon [name]="passwordIcon" class="password-icon" (click)='hideShowPassword()'></ion-icon>
+              </ion-card>
             </ion-list>
             <div>
               <p class="ion-padding-horizontal" *ngIf="loginStatus">{{loginStatus}}</p>
